_less/screen.less
/* ... */
/*Styles specific to mobiles*/

@media handheld, only screen and (max-device-height: 37em), only screen and (max-device-width: 50em){
	img{
		max-width:100%;
	}
	#head{
		margin:0px;
	}
	#head>div{
		overflow:hidden;
	}
	#langselect{
		background-color:transparent;
		border:0px;
		font-size:115%;
		position:absolute;
		right:-20px;
		top:10px;
	}
	#menumobile{
		display:inline-block;
		float:right;
		height:40px;
		width:40px;
		padding:12px;
		background-image:url(/img/menumobile.svg);
		background-repeat:no-repeat;
		background-position:center center;
	}
	#lang,#menufor,#menu{
		display:none;
	}
	#menufor{
		position:static;
		bottom:0px;
		margin:10px 0px 0px 0px;
		height:auto;
	}
	#menufor li{
		float:none;
		display:inline-block;
	}
	#menufor li a,#menufor li a:active,#menufor li a:visited,#menufor li a:link{
		padding:6px 6px 3px 6px;
	}
	#menufor li{
		margin:6px;
	}
	#menu{
		position:static;
		height:auto;
		margin:10px 0px 10px 0px;
	}
	#menu li{
		float:none;
		display:inline-block;
		padding: 5px;
	}
	#menu li a,#menu li a:active,#menu li a:visited,#menu li a:link{
		padding:5px;
	}
	#logo{
		position:static;
		display:inline-block;
		margin:10px;
	}
	#rightbox{
		position:static;
		margin:30px auto 20px auto;
	}
	#content{
		position:static;
		margin:0px 5px;
		padding:15px 10px 20px 10px;
	}
	#footer{
		padding:0px 0px 20px 5px;
		background-color:transparent;
	}
	.contributors{
		width:auto;
	}
	.foundation{
		padding:20px;
	}
	.preview{
		display:none;
	}
	.conferencebanner{
		position:static;
		display:inline-block;
		margin:0px 0px 10px 0px;
	}
}

